--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "pdf-parse": "^1.1.1",
+    "prompt-sync": "^4.2.0",
     "request": "^2.88.2",
+    "rivescript": "^2.2.1",
     "save": "^2.9.0"
   },
   "devDependencies": {
