--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "prompt-sync": "^4.2.0",
     "request": "^2.88.2",
     "rivescript": "^2.2.1",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "typescript": "^4.9.3",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.11.9",
     "nodemon": "^2.0.20",
-    "sync-request": "^6.1.0",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.3"
+    "sync-request": "^6.1.0"
   }
 }
