--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "pdf-parse": "^1.1.1",
@@ -18,9 +19,9 @@
     "request": "^2.88.2",
     "rivescript": "^2.2.1",
     "save": "^2.9.0",
-    "typescript": "^4.9.3",
     "ts-node": "^10.9.1",
-    "tslib": "^2.4.1"
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
