--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "give-me-a-joke": "^0.5.1",
     "morgan": "^1.10.0",
     "node-emoji": "^1.11.0",
+    "node-ical": "^0.15.3",
     "pdf-parse": "^1.1.1",
     "prompt-sync": "^4.2.0",
     "request": "^2.88.2",
