--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mikemcbride/dad-jokes": "^2.0.0",
     "body-parser": "^1.20.1",
+    "current-week-number": "^1.0.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "give-me-a-joke": "^0.5.1",
