--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "ts-node src/server.ts"
+    
   },
   "author": "Basser Bot Officers",
   "license": "ISC",
@@ -15,16 +16,15 @@
     "current-week-number": "^1.0.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "give-me-a-joke": "^0.5.1",
+    "give-me-a-joke": "^0.3.2",
     "morgan": "^1.10.0",
     "node-emoji": "^1.11.0",
-    "node-ical": "^0.15.3",
+    "node-ical": "^0.17.2",
     "pdf-parse": "^1.1.1",
     "prompt-sync": "^4.2.0",
     "request": "^2.88.2",
     "rivescript": "^1.19.0",
     "save": "^2.9.0",
-    "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "xlsx": "^0.18.5"
@@ -32,8 +32,9 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.11.9",
-    "nodemon": "^2.0.20",
-    "sync-request": "^6.1.0"
+    "nodemon": "^3.0.3",
+    "sync-request": "^6.1.0",
+    "ts-node": "^10.9.2"
   },
   "type": "module"
 }
