--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.ts",
   "scripts": {
     "test": "jest",
-    "start": "ts-node --esm src/server.ts"
+    "start": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/server.ts"
   },
   "author": "Basser Bot Officers",
   "license": "ISC",
